--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <p>this responsive website about me :)</p>
 
   </div>
-  <div class="w3-xlarge w3-section w3-center">
+  <div class="w3-xlarge w3-section w3-center w3-wide">
     <a href="https://github.com/boyingl"><i class="fa fa-github w3-hover-opacity" >&nbsp;&nbsp;&nbsp;</i></a>
     <a href="https://www.linkedin.com/in/ashley-boying-liu-375837112/"><i class="fa fa-linkedin w3-hover-opacity" ></i> </a>
   </div>
